# 0xpdf-mcp

./: .gitignore  README.md  glama.json  pyproject.toml
.github/workflows/: publish.yml
src/oxpdf_mcp/: __init__.py  __main__.py  server.py
